@@ -24,8 +24,6 @@ N * Further improve font handling so that font changes are minimised (change
 
 L * Add see also sections in the man pages
 
-K * Start using automake
-
 K * Handling of vsnprintf return number based on the differnt ways that
 	glibc behaves...
 
@@ -40,7 +38,6 @@ N * Linearisation (also known as optimised PDF)
   * Validity checks for things like names
 
 N * TIFF support does not currently include the following compression options:
-	- NONE
 	- Flate
 	- LZW (never!)
 	- Packbit
@@ -61,8 +58,6 @@ K * Work out how to get autoconf to define HAVE_LIBTIFF et al inside the source
 
   * At the moment if we can't change font we stop the whole schmozzle - should
 	we just report an error and keep going in the old font?
-
-  * Move the constants across to the new namespace
 
   * Re run GNU indent
 
@@ -101,3 +96,5 @@ K * Work out how to get autoconf to define HAVE_LIBTIFF et al inside the source
 	page and one later on?
 
   * Check the code examples for the curves.c code
+
+  * Make sure the date code is portable...
