@@ -56,7 +56,7 @@ AC_FUNC_VPRINTF
 AC_FUNC_SNPRINTF
 
 
-AC_OUTPUT(panda/Makefile man/Makefile Makefile)
+AC_OUTPUT(panda/Makefile Makefile)
 
 
 
